# torchmetrics_ext

./: LICENSE  README.md  pyproject.toml  setup.py
src/torchmetrics_ext/metrics/object_detection/: __init__.py  mean_average_precision_3d.py
src/torchmetrics_ext/metrics/visual_grounding/: __init__.py  multi3drefer.py  nr3d.py  scanrefer.py  vigil3d.py
src/torchmetrics_ext/metrics/vqa/: __init__.py  alphabench.py  revsi.py  revsibench.py  scanqa.py  vsibench.py
src/torchmetrics_ext/object_detection/: mean_average_precision_3d.py
src/torchmetrics_ext/tool/: __init__.py  bounding_box_3d.py
src/torchmetrics_ext/tools/: __init__.py  bounding_box_3d.py
src/torchmetrics_ext/util/: __init__.py  bounding_box_3d.py
src/torchmetrics_ext/visual_grounding/: __init__.py  referit3d.py  scanrefer.py
test/: test_multi3drefer.py  test_scanqa.py  test_vigil3d.py  test_vsibench.py
